--- a/Fsing/FThresholdsPaper/kmacros3.sty
+++ b/Fsing/FThresholdsPaper/kmacros3.sty
@@ -246,6 +246,7 @@
 \DeclareMathOperator{\Char}{{char}}
 \DeclareMathOperator{\Cart}{{Cartier}}
 \DeclareMathOperator{\fpt}{{fpt}}
+\DeclareMathOperator{\lct}{{lct}}
 \DeclareMathOperator{\divisor}{{div}}
 \DeclareMathOperator{\Div}{{div}}
 \DeclareMathOperator{\ord}{{ord}}
