--- a/Fsing/readme
+++ b/Fsing/readme
@@ -2,6 +2,12 @@ This is a project to build tools for computing things related to the Frobenius m
 
 Here is the development history (in reverse order):
 
+modified at a Coding Sprint at the Institute for Institute for Mathematics and its Applications in June 2019 by 
+
+Daniel Hernandez
+Pedro Teixeira
+Karl Schwede
+
 modified at a meeting at the University of Utah in August 2018 by
 
 Daniel Hernandez
@@ -22,7 +28,7 @@ Emily Witt
 
 modified at Workshop-2016-Utah by
 
-DJ Bruce
+Juliette Bruce
 Daniel Hernandez
 Moty Katzman
 Matthew Mastroeni
@@ -33,8 +39,8 @@ Emily Witt
 
 modified at Workshop-2015-Boise by
 
-DJ Bruce
 Erin Bela
+Juliette Bruce
 Daniel Hernandez
 Zhibek Kadyrsizova
 Emily Witt
