--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -91,7 +91,7 @@ urlcolor=OliveGreen
 \date{\today}
 
 \begin{abstract}
-	This note describes a \emph{Macaulay2} package for computations of $F$-pure thresholds, more general $F$-thresholds, and other related numerical invariants, in prime characteristic commutative algebra.  
+	This note describes a \emph{Macaulay2} package for the computation and estimation of certain numerical invariants arising in prime characteristic commutative algebr.  Namely, $F$-pure thresholds, more general $F$-thresholds, and other related numerical invariants, in prime characteristic commutative algebra.  
 \end{abstract}
 
 
@@ -103,9 +103,9 @@ urlcolor=OliveGreen
 
 \section{Introduction}
 
-This paper describes the \emph{Macaulay2} package \emph{FThresholds}, which provides tools to compute $F$-pure thresholds, $F$-thresholds, and $F$-jumping exponents.  Recall that a ring $R$ of prime characteristic $p>0$ is $F$-pure if the Frobenius morphism $F : R \to R$ is a pure morphism (under geometric hypotheses, this is equivalent to the Frobenius morphism being split).  The notion of $F$-purity appeared first in the work of Hochster and Roberts in \cite{HochsterRobertsFrobeniusLocalCohomology}, was compared with rational singularities in \cite{FedderFPureRat}, and was used globally to study properties of Schubert varieties in \cite{MehtaRamanathanFrobeniusSplittingAndCohomologyVanishing}.  
+This paper describes the \emph{Macaulay2} package \emph{FThresholds}, which provides tools for computing certain fundamental invariants arising in prime characteristic commutative algebra, namely, \emph{$F$-pure thresholds}, \emph{$F$-thresholds}, and \emph{$F$-jumping exponents}.  Recall that a ring $R$ of prime characteristic $p>0$ is said to be \emph{$F$-pure} if the Frobenius morphism $F : R \to R$ sending an element to its $p^\text{th}$ power is a pure morphism (under geometric hypotheses, this is equivalent to the condition that the Frobenius morphism is split).  The notion of $F$-purity appeared first in the work of Hochster and Roberts in \cite{HochsterRobertsFrobeniusLocalCohomology}, was compared with rational singularities in \cite{FedderFPureRat}, and was used globally to study properties of Schubert varieties in \cite{MehtaRamanathanFrobeniusSplittingAndCohomologyVanishing}.  
 
-After the advent of tight closure \cite{HochsterHunekeTC1}, the usage of Frobenius to measure singularities proliferated, and based on a tight connection discovered between $F$-pure and log canonical singularities \cite{HaraWatanabeFRegFPure}, the notion of $F$-purity was generalized to pairs $(R, f^t)$, where $f$ is an element of a ring $R$, and $t$ is a positive rational number $t$ considered as a formal exponent.  Along these lines, the notion of the \emph{$F$-pure threshold} (or $\fpt$) was defined in analogy with the log canonical threshold (or $\lct$) \cite{TakagiWatanabeFPureThresh,MustataTakagiWatanabeFThresholdsAndBernsteinSato}.  The $\fpt$ of $(R, f)$ is the supremum over all $t$ for which $(R, f^t)$ is $F$-pure, and the functionality computing this number is the core of this package.  As a further generalization, the notion of \emph{$F$-threshold} was also introduced.  All of these \emph{thresholds} have been the focus of intense study over the past 15 years.
+After the advent of tight closure \cite{HochsterHunekeTC1}, the usage of the Frobenius endomorphism to measure singularities proliferated, and based on a strong connection discovered between $F$-pure and \emph{log canonical} singularities \cite{HaraWatanabeFRegFPure}, the notion of $F$-purity was generalized to pairs $(R, f^t)$, where $f$ is an element of $R$, and $t$ is a positive rational number $t$ considered as a formal exponent.  Along these lines, the notion of the \emph{$F$-pure threshold} (or $\fpt$) was defined in analogy with the log canonical threshold (or $\lct$) \cite{TakagiWatanabeFPureThresh,MustataTakagiWatanabeFThresholdsAndBernsteinSato}.  The $\fpt$ of $(R, f)$ is the supremum over all $t$ for which $(R, f^t)$ is $F$-pure, and the functionality computing this number is the core of this package.  As a further generalization, the notion of \emph{$F$-threshold} was also introduced.  All of these \emph{thresholds} have been the focus of intense study over the past 15 years.
 
 There are three main sections in this paper, describing the functionality implemented in the \emph{Macaulay2} package \emph{FThresholds}. 
 \begin{itemize}
@@ -114,9 +114,11 @@ There are three main sections in this paper, describing the functionality implem
 \item{} \autoref{sec.FPT} describes the {\tt fpt} function, and how it works.
 \end{itemize}
 
-This package builds heavily upon the \emph{TestIdeals} package, focused on computing test ideals and related objects in prime characteristic.  
+This package builds heavily upon the \emph{TestIdeals} package, which provides a broad range of functionality in prime characteristic commutative algebra. 
 
-\noindent {\it Acknowledgements.}  The authors thank...contributors of the package...organizers of the M2 workshops...Karl's funding that funded the UU visit...  We also extend an enthusiastic thank you to 
+
+\noindent {\it Acknowledgements.}  First and foremost, the authors enthusiastically thank all contributors to the \emph{FThresholds} package:  Erin Bela, Juliette Bruce, Zhibek Kadyrsizova, Sara Malec, Maral Mostafazadehfard, Marcus Robinson, Dan Smolkin, and Robert Walker.  We thank the organizers of the five \emph{Macaulay2} workshops where much of the functionality in the package was develope, hosted by Wake Forest University in 2012, the University of California, Berkeley in 2014 and 2017, Boise State University in 2015, and the University of Utah in 2016. 
+Finally, we thank the University of Utah for hosting a collaborative development visit in 2018, and the Institute of Mathematics and its Applications for its support for a Coding Sprint in 2019, where the current version of the package was finalized and this paper was completed. 
 
 \section{The $F$-pure threshold limit and {\tt nu}}
 \label{sec.Nu}
