--- a/Fsing/FThresholdsPaper/MainBib.bib
+++ b/Fsing/FThresholdsPaper/MainBib.bib
@@ -2826,6 +2826,23 @@ MRREVIEWER = {Scott R. Nollet},
   Volume                   = {142}
 }
 
+@article {HernandezFPurityOfHypersurfaces,
+    AUTHOR = {Hern\'{a}ndez, Daniel J.},
+     TITLE = {{$F$}-purity of hypersurfaces},
+   JOURNAL = {Math. Res. Lett.},
+  FJOURNAL = {Mathematical Research Letters},
+    VOLUME = {19},
+      YEAR = {2012},
+    NUMBER = {2},
+     PAGES = {389--401},
+      ISSN = {1073-2780},
+   MRCLASS = {13A35},
+  MRNUMBER = {2955770},
+MRREVIEWER = {Adela N. Vraciu},
+       DOI = {10.4310/MRL.2012.v19.n2.a11},
+       URL = {https://doi.org/10.4310/MRL.2012.v19.n2.a11},
+}
+
 @PHDTHESIS{DanielThesis,
   author = {Hern\'andez, Daniel},
   title = {{$F$}-purity for hypersurfaces},
@@ -2841,6 +2858,9 @@ MRREVIEWER = {Scott R. Nollet},
   owner = {Karl Work Laptop},
   timestamp = {2012.06.21}
 }
+
+
+
 
 @ARTICLE{HerzogRingeDerCharakteristikP,
   author = {J{\"u}rgen Herzog},
